fixed shortcut shifting when deleting & QOL stuff.

--- a/resources/darkorange.css
+++ b/resources/darkorange.css
@@ -24,6 +24,12 @@ QWidget:item:selected
     background-color: QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #d7801a);
 }
 
+QLineEdit:hover,QLineEdit:focus
+{
+    border: 2px solid QLinearGradient( x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 #ffa02f, stop: 1 #d7801a);
+}
+
+
 QMenuBar::item
 {
     background: transparent;
